--- a/kanban.org
+++ b/kanban.org
@@ -61,6 +61,16 @@ rails new my_app --skip-webpack-install --skip-javascript -d <database_you_want>
 
 * Jira Tickets
 ** Todo
+*** TODO Make the 'Stop' button on the 'Stopwatch' component page stop the counting up sequence
+<2023-05-11 Thu 12:55>: I basically just need to use similar code to the 'Timer' component page's 'Stop' button behavior.
+*** TODO Make the 'Reset' button on the 'Stopwatch' component page reset the entire sequence
+<2023-05-11 Thu 12:56>: I would need to model the behavior off of the existing 'Reset' button on the 'Timer' component page.
+*** TODO Make the 'Start' button start a sequence of 4 consecutive beat sounds in a row using a '4/4' time signature
+<2023-05-11 Thu 12:52>: I think it would be good to simply get a sequence of 4 beat sounds to occur in a row.
+
+I don't even think I need to find an NPM package for this really, and can probably just use 'Audio()' constructor in this scenario.
+
+I will probably just have to set the BPM using the 'BPM' value.
 *** TODO Make the 'Start' button work on the 'Metronome' component page to start the metronome animation sequence
 <2023-05-08 Mon 16:18>: Ideally, the 'Start' button on the 'Metronome' component page should do the following:
 - It should start a sequence of counting in fours which should be visible as each red circle becomes green as the cycle continues until the 4 count is complete
@@ -84,12 +94,10 @@ From the looks of it, it seems just like React where it is its own self containe
 <2023-04-17 Mon 15:26>: I would like to make this app look flashy when picking the various component pages, so this is an element I believe that is necessary for this project.
 *** TODO Deploy the app on Render.com
 ** In Progress
-*** IN-PROGRESS Clear the 'hours', 'mins', and 'secs' inputs when the countdown is complete or when the 'Reset' button is clicked
-<2023-05-10 Wed 11:57>: I need to add the following behavior:
+*** IN-PROGRESS Make the 'Start' button on the 'Stopwatch' component page start the counting up sequence
+<2023-05-11 Thu 12:54>: I need to create a counting up sequence that is the basically the reverse of the 'Timer' component page.
 
-When the countdown is complete or when the 'Reset' button is clicked, the following action needs to occur:
-- The 'hr-input', 'min-input', and 'sec-input' fields need to be cleared to an empty string
-
+I just need to review the code, and pretty much increment a variable that counts up.
 ** Completed
 *** DONE Git clone related 'Rails + Vue + Vite' template from GitHub and get it running locally
 <2023-04-10 Mon 19:35>: I need to follow the instructions present within the related GitHub page:
@@ -911,6 +919,37 @@ What I will need to do:
 - Another thing I noticed is that the 'Inside countdown' print statement keeps repeating even when the 'Stop' button is pressed --> This means that the loop never exits at the end either
 
 <2023-05-10 Wed 11:55>: After a bit of research, I was able to resolve the issue by adding an additional if statement right before the 'countdown' variable function that clears the interval beforehand. This prevents the issue of creating multiple 'setInterval' instances, and fixed the issue.
+*** DONE Clear the 'hours', 'mins', and 'secs' inputs when the countdown is complete or when the 'Reset' button is clicked
+<2023-05-10 Wed 11:57>: I need to add the following behavior:
+
+When the countdown is complete or when the 'Reset' button is clicked, the following action needs to occur:
+- The 'hr-input', 'min-input', and 'sec-input' fields need to be cleared to an empty string
+
+<2023-05-11 Thu 11:58>: I tried using '.innerHTML', '.textContent', and also '.value' in this scenario. The problem is that when you interact with any of the inputs that are attached to the 'v-model' paradigm for Vue, it returns the exact value of the input field itself.
+
+I tried referring to the Vue docs page, but it doesn't really show an example on how to really interact with or change the '.value' of an input tag in this scenario using Vue itself:
+- https://vuejs.org/guide/essentials/forms.html
+
+I did some further research and found this StackOverflow post's 'What you need is to set this.text to an empty string in your submitForm function:' solution:
+- https://stackoverflow.com/questions/41518609/clearing-input-in-vuejs-form
+
+However, even after using the '.text' property, that didn't seem to do the trick either.
+
+I then used 'typeof' for the individual input tags that have the related 'v-model' attribute, and they all returned 'number' type.
+
+I also tried to refer to these Vue docs page on 'Reactivity' but this didn't really match to my example either:
+- https://vuejs.org/guide/extras/reactivity-in-depth.html
+- https://vuejs.org/guide/essentials/reactivity-fundamentals.html
+
+<2023-05-11 Thu 12:49>: I then did further research, and figured out that you can basically just access the 'v-model' directive directly, and literally set it to a blank string:
+- https://reactgo.com/clear-input-value-vue/
+
+With this in mind, I used the following idea, which totally worked:
+#+begin_src js
+this.hrinput = "";
+this.mininput = "";
+this.secinput = "";
+#+end_src
 ** Cancelled
 *** CANCELLED Ensure that the actual Vue.js related template actually installed Vue.js components
 <2023-04-12 Wed 22:02>: Based on watching a few refresher videos on Vue.js, I realized that the template I'm using might not even be installing Vue.js correctly.
